--- a/Trakt/Trakt.csproj
+++ b/Trakt/Trakt.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Model\TraktUser.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScheduledTasks\SyncLibraryTask.cs" />
     <Compile Include="ServerMediator.cs" />
     <Compile Include="TraktGateway.cs" />
   </ItemGroup>
