--- a/Trakt/packages.config
+++ b/Trakt/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MediaBrowser.Common" version="1.0.1" targetFramework="net45" />
   <package id="MediaBrowser.Server.Core" version="1.0.0" targetFramework="net45" />
+  <package id="MediaBrowser.Theater.Core" version="1.0.0" targetFramework="net45" />
 </packages>
