--- a/Trakt/Trakt.csproj
+++ b/Trakt/Trakt.csproj
@@ -34,20 +34,20 @@
     <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MediaBrowser.Common">
-      <HintPath>..\packages\MediaBrowser.Common.3.0.35\lib\net45\MediaBrowser.Common.dll</HintPath>
+    <Reference Include="MediaBrowser.Common, Version=3.0.4823.20740, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\MediaBrowser.Common.3.0.49\lib\net45\MediaBrowser.Common.dll</HintPath>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="MediaBrowser.Controller">
-      <HintPath>..\packages\MediaBrowser.Server.Core.3.0.35\lib\net45\MediaBrowser.Controller.dll</HintPath>
+    <Reference Include="MediaBrowser.Controller, Version=3.0.4823.20740, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\MediaBrowser.Server.Core.3.0.49\lib\net45\MediaBrowser.Controller.dll</HintPath>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="MediaBrowser.Model">
-      <HintPath>..\packages\MediaBrowser.Common.3.0.35\lib\net45\MediaBrowser.Model.dll</HintPath>
-    </Reference>
-    <Reference Include="MediaBrowser.UI">
-      <HintPath>..\packages\MediaBrowser.Theater.Core.3.0.25\lib\net45\MediaBrowser.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="MediaBrowser.UI.Controls">
-      <HintPath>..\packages\MediaBrowser.Theater.Core.3.0.25\lib\net45\MediaBrowser.UI.Controls.dll</HintPath>
+    <Reference Include="MediaBrowser.Model, Version=3.0.4823.20739, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\MediaBrowser.Common.3.0.49\lib\net45\MediaBrowser.Model.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
@@ -66,7 +66,6 @@
     <Compile Include="Api\DataContracts\TraktResponseDataContract.cs" />
     <Compile Include="Api\TraktApi.cs" />
     <Compile Include="Api\TraktURIs.cs" />
-    <Compile Include="ClientMediator.cs" />
     <Compile Include="Configuration\PluginConfiguration.cs" />
     <Compile Include="Configuration\TraktConfigurationPage.cs" />
     <Compile Include="Enums.cs" />
