--- a/Trakt/packages.config
+++ b/Trakt/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MediaBrowser.Common" version="3.0.49" targetFramework="net45" />
-  <package id="MediaBrowser.Server.Core" version="3.0.49" targetFramework="net45" />
-  <package id="MediaBrowser.Theater.Core" version="3.0.37" targetFramework="net45" />
+  <package id="MediaBrowser.Common" version="3.0.56" targetFramework="net45" />
+  <package id="MediaBrowser.Server.Core" version="3.0.56" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
 </packages>
