--- a/packages/MediaBrowser.Common.3.0.81/MediaBrowser.Common.3.0.81.nuspec
+++ b/packages/MediaBrowser.Common.3.0.81/MediaBrowser.Common.3.0.81.nuspec
@@ -10,7 +10,9 @@
     <iconUrl>http://www.mb3admin.com/images/mb3icons1-1.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Contains common model objects and interfaces used by all Media Browser solutions.</description>
+    <releaseNotes />
     <copyright>Copyright © Media Browser 2013</copyright>
+    <language />
     <references>
       <reference file="MediaBrowser.Common.dll" />
       <reference file="MediaBrowser.Model.dll" />
