--- a/packages/MediaBrowser.Server.Core.3.0.106/MediaBrowser.Server.Core.3.0.106.nuspec
+++ b/packages/MediaBrowser.Server.Core.3.0.106/MediaBrowser.Server.Core.3.0.106.nuspec
@@ -1,15 +1,18 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <id>MediaBrowser.Common</id>
-    <version>3.0.104</version>
-    <title>MediaBrowser.Common</title>
+    <id>MediaBrowser.Server.Core</id>
+    <version>3.0.106</version>
+    <title>Media Browser.Server.Core</title>
     <authors>Media Browser Team</authors>
     <owners>Media Browser Team</owners>
     <projectUrl>https://github.com/MediaBrowser/MediaBrowser</projectUrl>
     <iconUrl>http://www.mb3admin.com/images/mb3icons1-1.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Contains common model objects and interfaces used by all Media Browser solutions.</description>
+    <description>Contains core components required to build plugins for Media Browser Server.</description>
     <copyright>Copyright © Media Browser 2013</copyright>
+    <dependencies>
+      <dependency id="MediaBrowser.Common" version="3.0.106" />
+    </dependencies>
   </metadata>
 </package>
