--- a/Trakt/Trakt.csproj
+++ b/Trakt/Trakt.csproj
@@ -61,6 +61,9 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -92,6 +95,7 @@
     <Compile Include="Helpers\LibraryManagerEventsHelper.cs" />
     <Compile Include="Helpers\UserHelpers.cs" />
     <Compile Include="Model\TraktUser.cs" />
+    <Compile Include="Net\HttpClientManager.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScheduledTasks\SyncFromTraktTask.cs" />
