--- a/Trakt/Trakt.csproj
+++ b/Trakt/Trakt.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Enums.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Helpers\LibraryManagerEventsHelper.cs" />
+    <Compile Include="Helpers\UserDataManagerEventsHelper.cs" />
     <Compile Include="Helpers\UserHelpers.cs" />
     <Compile Include="Model\TraktUser.cs" />
     <Compile Include="Net\HttpClientManager.cs" />
