--- a/Trakt/packages.config
+++ b/Trakt/packages.config
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MediaBrowser.Common" version="3.0.260" targetFramework="net45" />
-  <package id="MediaBrowser.Server.Core" version="3.0.260" targetFramework="net45" />
-  <package id="ServiceStack" version="3.9.70" targetFramework="net45" />
-  <package id="ServiceStack.Common" version="3.9.71" targetFramework="net45" />
-  <package id="ServiceStack.OrmLite.SqlServer" version="3.9.71" targetFramework="net45" />
-  <package id="ServiceStack.Redis" version="3.9.71" targetFramework="net45" />
-  <package id="ServiceStack.Text" version="3.9.71" targetFramework="net45" />
+  <package id="MediaBrowser.Common" version="3.0.261" targetFramework="net45" />
+  <package id="MediaBrowser.Server.Core" version="3.0.261" targetFramework="net45" />
+  <package id="ServiceStack.Interfaces" version="4.0.3" targetFramework="net45" />
 </packages>
